--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/test-utils": "^3.7.4",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "@vue/test-utils": "^2.4.1",
     "cypress": "^13.3.1",
+    "eslint-plugin-vitest": "^0.3.2",
+    "jsdom": "^22.1.0",
     "nuxt": "^3.7.4",
+    "vitest": "^0.33.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   }
