--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "test": "vitest"
+    "test": "vitest",
+    "cypress:open": "npx cypress open",
+    "cypress:run": "npx cypress run"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -16,8 +18,10 @@
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/test-utils": "^2.4.1",
     "cypress": "^13.3.1",
+    "cypress-multi-reporters": "^1.6.3",
     "eslint-plugin-vitest": "^0.3.2",
     "jsdom": "^22.1.0",
+    "mochawesome": "^7.1.3",
     "nuxt": "^3.7.4",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.33.0",
