--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,5 @@ jobs:
         uses: dmitry/cypress-report-action@1.0.0
         with:
           token: ${{ secrets.GH_TOKEN }}
-          pathname: cypress/reports/mocha/index.json
+          pathname: ./cypress/reports/mocha/index.json
         if: always()
