--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "test": "vitest",
+    "cypress:test": "start-server-and-test start http://localhost:3000 cy:run",
     "cypress:open": "npx cypress open",
     "cypress:run": "npx cypress run"
   },
@@ -23,6 +24,7 @@
     "jsdom": "^22.1.0",
     "mochawesome": "^7.1.3",
     "nuxt": "^3.7.4",
+    "start-server-and-test": "^2.0.3",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.33.0",
     "vue": "^3.3.4",
