--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "vitest": "^0.33.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@actions/core": "^1.10.1"
   }
 }
