--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
+    "@aki77/actions-replace-comment": "^0.6.0",
+    "markdown-table": "^3.0.3"
   }
 }
