--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
         uses: ./.github/actions/reports
         with:
           token: ${{ env.GITHUB_TOKEN }}
-          pathname: ../cypress/reports/mocha/index.json
+          pathname: ./cypress/reports/mocha/index.json
 
   # cypress-run:
   #   runs-on: ubuntu-latest
