--- a/.github/actions/reports/action.yaml
+++ b/.github/actions/reports/action.yaml
@@ -19,10 +19,5 @@ inputs:
     required: false
     default: true
 runs:
-  - name: Setup Node
-    uses: actions/setup-node@v3
-    with:
-      node-version: 18
-      cache: "npm"
-
+  using: "node18"
   main: "index.js"
