--- a/.github/actions/reports/action.yaml
+++ b/.github/actions/reports/action.yaml
@@ -27,4 +27,9 @@ runs:
 
     - name: run
       run: node $GITHUB_ACTION_PATH/index.js
+      with:
+        token: ${{ inputs.token }}
+        pathname: ${{ inputs.pathname }}
+        title: ${{ inputs.title }}
+        always: ${{ inputs.always }}
       shell: bash
