--- a/.github/actions/reports/action.yaml
+++ b/.github/actions/reports/action.yaml
@@ -20,11 +20,4 @@ inputs:
     default: true
 runs:
   using: "composite"
-  steps:
-    - name: install dependencies
-      run: npm install @actions/core@1.10 @actions/github@6.0 @aki77/actions-replace-comment@0.6 markdown-table@3.0
-      shell: bash
-
-    - name: run
-      run: node $GITHUB_ACTION_PATH/index.js  ${{ inputs.pathname }} ${{ inputs.token }} ${{ inputs.title }} ${{ inputs.always }}
-      shell: bash
+  main: "index.js"
